# dataquill

./: README.md  pyproject.toml
dataquill/: embeddings.py  main.py  utils.py
