[tool.poetry]
name = "dataquill"
version = "0.1.0"
description = ""
authors = ["Venu Vardhan Reddy Tekula <vt2182@nyu.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.22.0"
langchain = "^0.0.171"
openai = "^0.27.6"
pypdf = "^3.8.1"
faiss-cpu = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
